# codc-cli

./: .gitignore  .pdm-python  README.md  R_performance.R  R_performance_cli.R  analyzer.py  cli.py  dc_copula_cli.py  dependencies.R  dockerfile  go_enrichment_cli.R  performance-measurement.md  pyproject.toml
.github/workflows/: ci.yml
Copula/: empirical_copula.py
data/: BRCA_normal.tsv  BRCA_tumor.tsv  R_impl_network.tsv  python_impl_network.tsv
downsteam_analysis/: python_performance.py
downstream-analysis/: go-enrichment.md  methodology.md  performance-measure.md
tests/: test_empirical_copula.py  test_gene_expression_analyser.py
tests/data/: BRCA_normal_subset.csv  BRCA_normal_subset.tsv  BRCA_tumor_subset.csv  BRCA_tumor_subset.tsv
