[project]
name = "gene-coexpress"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Md Badiuzzaman Pranto", email = "prantoamt@gmail.com"},
]
dependencies = [
    "click==8.1.7",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "pytest==8.1.1",
    "scipy==1.13.0",
    "tqdm==4.66.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
cli = "python cli.py"
